--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -1,6 +1,4 @@
 /*this is my styles sheet*/
-
-
 * {
 font-family:Arial, Helvetica, sans-serif;
 }
@@ -12,3 +10,6 @@ margin-bottom:100px;
 margin-right:100px;
 margin-left:100px;
 }
+
+P { text-align: center }
+H1 { text-align: center }
