--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -14,3 +14,12 @@ margin-left:100px;
 P { text-align: center }
 H1 { text-align: center }
 
+#wrapper {
+    width: 500px;
+    margin: 10px auto 10px auto;
+    /* top, right, bottom, left */
+    height: 1000px;
+    background:#eeeeee;
+}
+
+
