--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -15,11 +15,11 @@ P { text-align: center }
 H1 { text-align: center }
 
 #wrapper {
-    width: 500px;
+    width: 1000px;
     margin: 10px auto 10px auto;
     /* top, right, bottom, left */
     height: 1000px;
-    background:#eeeeee;
+    background:#ffffff;
 }
 
 
