--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -5,7 +5,7 @@ font-family:Arial, Helvetica, sans-serif;
 
 body
 {
-background-color:#EFEFD1;
+background-color:#003366;
 margin-bottom:100px;
 margin-right:100px;
 margin-left:100px;
