--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -22,6 +22,5 @@ H1 { text-align: center }
     background:#ffffff;
 }
 
-.linkborder {border-style:solid;
+a:hover { border-style:solid;
 border-color:#98bf21;}
-
