--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -12,7 +12,7 @@ margin-left:100px;
 }
 
 P { text-align: center }
-H1 { text-align: center }
+h1 { text-align: center; margin-top:0; }
 
 #wrapper {
     width: 1000px;
