--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -3,6 +3,16 @@
 font-family:Arial, Helvetica, sans-serif;
 }
 
+#bg {
+  position: fixed; 
+  top: 0; 
+  left: 0; 
+	
+  /* Preserve aspet ratio */
+  min-width: 100%;
+  min-height: 100%;
+}
+
 body
 {
 background-color:#003366;
