--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -3,10 +3,7 @@
 font-family:Arial, Helvetica, sans-serif;
 }
 
-#bg {
-  position: fixed; 
-  top: 0; 
-  left: 0; 
+#bg { background-image: url(https://doc-04-4s-docs.googleusercontent.com/docs/securesc/p52d00b4t6ppsquckeqvdfm2je30aon2/e8mdint4m60blb8d6slhkd920u27pfcr/1394575200000/01836357751205858553/01836357751205858553/0B6HcEl1I72V1Z3pqc2dwUHRXbVU?h=04987144412459713847); }
 	
   /* Preserve aspet ratio */
   min-width: 100%;
