--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -8,6 +8,9 @@ background-repeat: no-repeat; /* don't tile the image */
 background-position: center;
 background-size:cover;}
 
+h1 {color:#ffffff;
+float:right;
+font-size:40px;}
 
 body
 {
