--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -9,7 +9,7 @@ background-position: center;
 background-size:cover;}
 
 h1 {color:#ffffff;
-float:right;
+text-align:right;
 font-size:40px;}
 
 body
