--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -38,24 +38,28 @@ a.portfolio {
     top: 375px; /* or whatever the vertical pixel position is above the canvas */
     left: 180px; /* or whatever the horizontal pixel position is above the canvas */
     font-weight:bold;
+    color:#ffffff;
 }
 a.resume {
     position: absolute;
     top: 170px; /* or whatever the vertical pixel position is above the canvas */
     left: 495px; /* or whatever the horizontal pixel position is above the canvas */
     font-weight:bold;
+    color:#ffffff;
 }
 a.contact {
     position: absolute;
     top: 260px; /* or whatever the vertical pixel position is above the canvas */
     left: 960px; /* or whatever the horizontal pixel position is above the canvas */
     font-weight:bold;
+    color:#ffffff;
 }
 a.articles{
     position: absolute;
     top: 370px; /* or whatever the vertical pixel position is above the canvas */
     left: 660px; /* or whatever the horizontal pixel position is above the canvas */
     font-weight:bold;
+    color:#000000;
 }
 
 
