--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -47,7 +47,7 @@ a.resume {
     font-weight:bold;
     color:#ffffff;
 }
-a.contact {
+a.contact2 {
     position: relative;
     top: 260px; /* or whatever the vertical pixel position is above the canvas */
     left: 960px; /* or whatever the horizontal pixel position is above the canvas */
