--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -6,7 +6,12 @@ font-family:Arial, Helvetica, sans-serif;
 #bg { background-image: url(https://drive.google.com/uc?id=0B6HcEl1I72V1aHkzR3c3Y2tIZTQ);
 background-repeat: no-repeat; /* don't tile the image */
 background-position: center;
-background-size:cover;}
+background-size:cover;
+   width: 90%;
+    margin: 10px auto 10px auto;
+    /* top, right, bottom, left */
+    background:#ffffff;
+    }
 
 h1 {color:#ffffff;
 text-align:right;
@@ -24,7 +29,7 @@ P { text-align: center }
 h1 { text-align: center; margin-top:0; }
 
 #wrapper {
-    width: 1000px;
+    width: 90%;
     margin: 10px auto 10px auto;
     /* top, right, bottom, left */
     background:#ffffff;
