--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -7,10 +7,7 @@ font-family:Arial, Helvetica, sans-serif;
 background-repeat: no-repeat; /* don't tile the image */
 background-position: center;
 background-size:cover;
-   width: 90%;
-    margin: 10px auto 10px auto;
-    /* top, right, bottom, left */
-    background:#ffffff;
+height: 400px;
     }
 
 h1 {color:#ffffff;
