--- a/styles/webwidget_menu_glide.css
+++ b/styles/webwidget_menu_glide.css
@@ -1,4 +1,5 @@
 .webwidget_menu_glide{
+    margin: 0 auto;
     padding: 5px;
     -moz-border-radius-topright: 10px;
     -moz-border-radius-topleft: 10px;
