--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -32,7 +32,7 @@ h1 { text-align: center; margin-top:0; }
     background:#ffffff;
 }
 
-a:hover { border-style:solid;
+/*a:hover { border-style:solid; */
 border-color:#98bf21;}
 
 a.portfolio {
