--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,8 @@
+* {
+font-family:Arial, Helvetica, sans-serif;
+}
+
+
 #bg { background-image: url(https://drive.google.com/uc?id=0B6HcEl1I72V1MmRNRThpWW9kRmc);
 background-repeat: no-repeat; /* don't tile the image */
 background-position: center;
@@ -14,3 +19,7 @@ height: 900px;
 	.map_image #map_link_2 { width: 219px; height: 252px; top: 108px; left: 14px; }
 	.map_image #map_link_3 { width: 86px; height: 38px; top: 348.0000305175781px; left: 401px; }
 </style>
+
+h1 {color:#ffffff;
+text-align:right;
+font-size:40px;}
