--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -28,6 +28,7 @@ h1 { text-align: center; margin-top:0; }
 
 #wrapper {
     width: 90%;
+    padding: 50px;
     margin: 10px, auto 10px, auto;
     /* top, right, bottom, left */
     background:#ffffff;
