--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -28,7 +28,9 @@ h1 { text-align: center; margin-top:0; }
 
 #wrapper {
     width: 90%;
-    padding: 100px;
+    padding-left: 100px;
+    padding-top:0px;
+    padding-bottom: 50px;
     margin: 10px, auto 10px, auto;
     /* top, right, bottom, left */
     background:#ffffff;
