--- a/styles/mystyles3.css
+++ b/styles/mystyles3.css
@@ -27,7 +27,7 @@ P { text-align: center }
 h1 { text-align: center; margin-top:0; }
 
 #wrapper {
-    width: 90%;
+    width: 1000px;
     padding-left: 100px;
     padding-top:50px;
     padding-bottom: 50px;
