--- a/styles/mystyles2.css
+++ b/styles/mystyles2.css
@@ -26,11 +26,11 @@ margin-left:100px;
 P { text-align: center }
 h1 { text-align: center; margin-top:0; }
 
-#wrapper {
-    width: 90%;
+.container {
+    /*width: 90%;
     padding: 50px;
     margin: 10px, auto 10px, auto;
-    /* top, right, bottom, left */
+    top, right, bottom, left */
     background:#ffffff;
 }
 
