--- a/styles/mystyles2.css
+++ b/styles/mystyles2.css
@@ -27,6 +27,7 @@ P { text-align: center }
 h1 { text-align: center; margin-top:0; }
 
 .container {
+    padding: 10px;
     /*width: 90%;
     padding: 50px;
     margin: 10px, auto 10px, auto;
