--- a/styles/mystyles3.css
+++ b/styles/mystyles3.css
@@ -27,7 +27,8 @@ P { text-align: center }
 h1 { text-align: center; margin-top:0; }
 
 .container {
-    padding-left: 50px;/*width: 1000px;
+    margin-left:auto;
+margin-right:auto;/*width: 1000px;
     padding-left: 100px;
     padding-top:50px;
     padding-bottom: 50px;
