--- a/styles/index.css
+++ b/styles/index.css
@@ -14,6 +14,16 @@ height: 700px;
 }
 
 
+body
+{
+background-color:#003366;
+margin-bottom:100px;
+margin-right:100px;
+margin-left:100px;
+}
+
+
+
 <style type="text/css">
 	.map_image { display: block; width: 800px; height: 600px; position: relative; background-position: 0 0; background-repeat: no-repeat; }
 	.map_image .map_link { display: block; position: absolute; text-indent: -999em; overflow: hidden; }
