--- a/styles/index.css
+++ b/styles/index.css
@@ -5,8 +5,7 @@ font-family:Arial, Helvetica, sans-serif;
 
 #bg {
 
-background-color:#003366;
-margin: 10px auto; 
+
 /*
 background-repeat: no-repeat;  don't tile the image
 background-position: center;
@@ -21,15 +20,22 @@ height: 700px;
 
 
 
-<style type="text/css">
-	.map_image { display: block; width: 800px; height: 600px; position: relative; background-position: 0 0; background-repeat: no-repeat; }
-	.map_image .map_link { display: block; position: absolute; text-indent: -999em; overflow: hidden; }
-	.map_image #map_link_0 { width: 123px; height: 124px; top: 120px; left: 280px; }
-	.map_image #map_link_1 { width: 88px; height: 77px; top: 261px; left: 597px; }
-	.map_image #map_link_2 { width: 219px; height: 252px; top: 108px; left: 14px; }
-	.map_image #map_link_3 { width: 86px; height: 38px; top: 348.0000305175781px; left: 401px; }
-</style>
 
-h1 {color:#ffffff;
+.map_image { display: block; width: 800px; height: 600px; position: relative; background-position: 0 0; background-repeat: no-repeat; }
+.map_image .map_link { display: block; position: absolute; text-indent: -999em; overflow: hidden; }
+.map_image #map_link_0 { width: 123px; height: 124px; top: 120px; left: 280px; }
+.map_image #map_link_1 { width: 88px; height: 77px; top: 261px; left: 597px; }
+.map_image #map_link_2 { width: 219px; height: 252px; top: 108px; left: 14px; }
+.map_image #map_link_3 { width: 86px; height: 38px; top: 348.0000305175781px; left: 401px; }
+
+
+h1 {
+	color:#ffffff;
 text-align:right;
-font-size:40px;}
+font-size:10px;
+}
+
+.background {
+background-color:#003366;
+margin: 10px auto; 
+}
