--- a/styles/index.css
+++ b/styles/index.css
@@ -30,7 +30,7 @@ body {
 .map_image #map_link_3 { width: 86px; height: 38px; top: 348.0000305175781px; left: 401px; }
 
 
-h1 {
+#bg h1 {
 color:#ffffff;
 text-align:right;
 font-size:20px;
