--- a/styles/index.css
+++ b/styles/index.css
@@ -2,9 +2,12 @@
 font-family:Arial, Helvetica, sans-serif;
 }
 
+body {
+	background-color:#003366;
+}
+
 
 #bg {
-
 
 /*
 background-repeat: no-repeat;  don't tile the image
@@ -16,11 +19,6 @@ height: 600px;
 margin: 25px auto;
 }
 
-body {
-	background-color:#003366;
-}
-
-
 
 .map_image { display: block; width: 800px; height: 600px; position: relative; background-position: 0 0; background-repeat: no-repeat; }
 .map_image .map_link { display: block; position: absolute; text-indent: -999em; overflow: hidden; }
@@ -30,7 +28,7 @@ body {
 .map_image #map_link_3 { width: 86px; height: 38px; top: 348.0000305175781px; left: 401px; }
 
 
-#bg h1 {
+h1 {
 color:#ffffff;
 text-align:right;
 font-size:20px;
