--- a/styles/resume.css
+++ b/styles/resume.css
@@ -27,7 +27,9 @@ P { text-align: center }
 h1 { text-align: center; margin-top:0; }
 
 .container {
-    padding: 150px;
+    padding-left: 150px;
+    padding-top: 50px;
+    padding-bottom: 50px;
     /*width: 1000px;
     padding-left: 100px;
     padding-top:50px;
