--- a/styles/resume.css
+++ b/styles/resume.css
@@ -13,7 +13,8 @@ height: 900px;
 h1 {
     color:#000000;
     font-size:40px;
-    margin:0 auto; 
+    margin-top:0; 
+    margin-left: 100px;
 }
 
 
