--- a/styles/articles.css
+++ b/styles/articles.css
@@ -23,7 +23,7 @@ margin-right:100px;
 margin-left:100px;
 }
 
-P { text-align: center }
+p { text-align: center }
 h1 { text-align: center; margin-top:0; }
 
 .container {
