--- a/styles/resume.css
+++ b/styles/resume.css
@@ -77,3 +77,15 @@ a.articles{
 li {
     list-style-type:none;
 }
+
+.img_thumb {
+   margin: 0 auto;text-align: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 3px;
+    line-height:120px;
+    text-align:center;
+}
+
+.img_thumb img {
+    vertical-align: middle;
+}
