--- a/styles/resume.css
+++ b/styles/resume.css
@@ -80,7 +80,7 @@ li {
 
 .img_thumb {
    margin: 0 auto;text-align: center;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: #fff(0, 0, 0, 0.5);
     border-radius: 3px;
     line-height:120px;
     text-align:center;
